# OpenWok

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  container-worker.js  fly.toml  package-lock.json  package.json  wrangler.containers.jsonc  wrangler.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml
.solo/pipelines/: progress.md
.solo/states/: build  deploy  review
.wrangler/tmp/bundle-v8XN9F/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-46b3pG/: d0e6062e89f023c79a598f8e42e5adf986828d7e-index_bg.wasm  shim.js  shim.js.map
crates/api/: Cargo.toml
crates/api/src/: db.rs  lib.rs  main.rs  payments.rs  sqlite_repo.rs  state.rs  stripe.rs  ws.rs
crates/api/src/routes/: couriers.rs  economics.rs  metrics.rs  mod.rs  orders.rs  restaurants.rs
crates/app/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
crates/app/assets/: style.css  tailwind.css
crates/app/public/: style.css  tailwind.css
crates/app/src/: app.rs  main.rs  state.rs
crates/app/src/db/: repo.rs
crates/app/src/pages/: auth.rs  checkout.rs  courier.rs  economics.rs  home.rs  mod.rs  operator.rs  order.rs  owner.rs  restaurants.rs
crates/app/src/server_fns/: admin.rs  auth.rs  config.rs  couriers.rs  mod.rs  orders.rs  owner.rs  restaurants.rs
crates/auth/: Cargo.toml
crates/auth/src/: client.rs  config.rs  error.rs  lib.rs  middleware.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: dispatch.rs  lib.rs  money.rs  order.rs  pricing.rs  repo.rs  types.rs
crates/core/src/application/: mod.rs  orders.rs  payments.rs  test_support.rs
crates/frontend/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
crates/frontend/assets/: style.css  tailwind.css
crates/frontend/public/: index.html  manifest.json  sw.js
crates/frontend/public/assets/: openwok-frontend-dxhaca0917efd888fab.js  openwok-frontend-dxhfb2cad39eb7da23e.js  openwok-frontend_bg-dxh21219b9164313a2.wasm  openwok-frontend_bg-dxh9ef292922958c861.wasm  style-dxh4ba1bdc8b8dde77.css  tailwind-dxh1ef15baf812f3dd.css
crates/frontend/src/: analytics.rs  api.rs  app.rs  local_db.rs  main.rs  platform.rs  state.rs  sync.rs
crates/frontend/src/pages/: auth.rs  checkout.rs  courier.rs  economics.rs  operator.rs  order.rs  owner.rs  restaurants.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: admin.rs  auth.rs  auth_handlers.rs  config.rs  couriers.rs  economics.rs  lib.rs  metrics.rs  orders.rs  restaurants.rs
crates/mobile/: Cargo.toml  Dioxus.toml
crates/mobile/assets/: style.css
crates/mobile/src/: api.rs  app.rs  auth.rs  config.rs  main.rs  state.rs  storage.rs
crates/mobile/src/pages/: checkout.rs  courier.rs  mod.rs  order.rs  restaurants.rs
crates/stripe-universal/: Cargo.toml
crates/stripe-universal/src/: client.rs  error.rs  lib.rs  types.rs  webhook.rs
crates/worker/: Cargo.toml
crates/worker/src/: d1_repo.rs  lib.rs
data/: openwok.db  openwok.db-shm  openwok.db-wal
docs/: evolution.md  prd.md  roadmap-full.md  workflow.md
docs/plan-done/auth-payments_20260320/: plan.md
docs/plan-done/cf-workers-deploy_20260320/: plan.md  spec.md
docs/plan-done/courier-dispatch_20260320/: spec.md
docs/plan-done/courier-mobile_20260321/: spec.md
docs/plan-done/frontend-split_20260320/: plan.md
docs/plan-done/mvp-core_20260320/: plan.md  spec.md
docs/plan-done/phase3-payments/: plan.md  spec.md
docs/plan-done/pilot-infra_20260320/: spec.md
docs/plan-done/restaurant-orders_20260320/: plan.md
docs/plan-done/tailwind-migration/: spec.md
docs/plan/admin-tools_20260320/: plan.md  spec.md
docs/plan/auth-payments_20260320/: plan.md  spec.md
docs/plan/courier-dispatch_20260320/: plan.md  spec.md
docs/plan/courier-mobile_20260321/: plan.md  spec.md
docs/plan/courier-pwa_20260321/: plan.md  spec.md
docs/plan/frontend-split_20260320/: plan.md  spec.md
docs/plan/fullstack-migration_20260321/: plan.md  spec.md
docs/plan/mvp-core_20260320/: plan.md
docs/plan/offline-first_20260321/: plan.md  spec.md
docs/plan/phase2-frontend/: plan.md  spec.md
docs/plan/phase4-federation/: plan.md  spec.md
docs/plan/pilot-infra_20260320/: plan.md
docs/plan/repo-abstraction_20260320/: plan.md  spec.md
docs/plan/restaurant-onboarding_20260320/: plan.md  spec.md
docs/plan/restaurant-orders_20260320/: plan.md  spec.md
docs/plan/tailwind-migration/: plan.md
docs/retro/: 2026-03-20-retro-admin-tools.md  2026-03-20-retro-auth-payments.md  2026-03-20-retro-courier-dispatch.md  2026-03-20-retro-frontend-split.md  2026-03-20-retro-repo-abstraction.md  2026-03-20-retro-restaurant-onboarding.md  2026-03-20-retro.md  2026-03-21-retro-restaurant-orders.md
migrations/: 0001_init.sql  0002_seed_la.sql  0003_pilot_zones.sql  0004_seed_pilot_restaurants.sql  0005_order_metrics.sql  0006_auth_users.sql  0007_payments.sql  0008_restaurant_owner.sql  0009_courier_user.sql  0010_admin_disputes.sql  0011_fix_seed_uuids.sql
planning/: ROADMAP.md
public/: index.html
public/assets/: openwok-frontend-dxh3a79478787714d3.js  openwok-frontend-dxh5f952c9a2dc9e9a.js  openwok-frontend-dxh8bf31e3e3021d9c0.js  openwok-frontend-dxh8d17278dfb96fb13.js  openwok-frontend-dxhde843c653d7aae9.js  openwok-frontend-dxhfa411073bdd939e6.js  openwok-frontend-dxhfd7ac3a27e976a2.js  openwok-frontend_bg-dxh132ddf91f418cb81.wasm  openwok-frontend_bg-dxh223d676afbce6552.wasm  openwok-frontend_bg-dxh7667659981635fd6.wasm  openwok-frontend_bg-dxh8d9326943fbf73f1.wasm  openwok-frontend_bg-dxha093834a42c932a3.wasm  openwok-frontend_bg-dxhdf2e8fc7567a094.wasm  openwok-frontend_bg-dxhec434023fc1ba539.wasm  style-dxh6d402542162ef95.css  tailwind-dxh21a978351e2081f.css  tailwind-dxh40111d8a4d623416.css  tailwind-dxhe53cb8ebc1c5299.css
scripts/: build-worker.sh
