[workspace]
members = ["crates/core", "crates/handlers", "crates/api", "crates/frontend", "crates/stripe-universal"]
resolver = "2"

[workspace.dependencies]
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
jsonwebtoken = "9"

# WASM release profile — optimized for Cloudflare Workers / Dioxus SPA
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
