[package]
name = "openwok-api"
version = "0.1.0"
edition = "2021"

[dependencies]
openwok-core = { path = "../core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
