[package]
name = "openwok-api"
version = "0.1.0"
edition = "2024"

[dependencies]
openwok-core = { path = "../core" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
