[package]
name = "openwok-app"
version = "0.1.0"
edition = "2024"

[dependencies]
openwok-core = { path = "../core" }
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

# Server-only deps (gated by feature)
axum = { workspace = true, features = ["ws"], optional = true }
tokio = { workspace = true, optional = true }
dioxus-cli-config = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
openwok-api = { path = "../api", optional = true }
superduperai-auth = { workspace = true, optional = true }

# WASM-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "Navigator"] }

[features]
default = []
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:dioxus-cli-config",
    "dep:tower-http",
    "dep:openwok-api",
    "dep:superduperai-auth",
]
web = ["dioxus/web"]

[dev-dependencies]
tower = "0.5"
