[package]
name = "superduperai-auth"
version = "0.1.0"
edition = "2024"
description = "Shared auth for SuperDuperAi apps — Supabase Auth + Google OAuth, axum middleware"
license = "MIT"

[features]
default = ["axum-middleware"]
axum-middleware = ["dep:axum", "dep:axum-extra", "dep:tower"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Optional: axum middleware
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", features = ["typed-header"], optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockito = "1"
