[package]
name = "openwok-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
