[package]
name = "openwok-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
openwok-core = { path = "../core" }
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true, features = ["js"] }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }
js-sys = "0.3"
