[package]
name = "openwok-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
openwok-core = { path = "../core" }
dioxus = { version = "0.7", features = ["router"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }

chrono = { workspace = true }

# Web-only deps (WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "Navigator"] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
# Local cache: localStorage on WASM (via web-sys), JSON files on native (via dirs)

# Native-only deps (desktop, iOS, Android)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5"
dirs = "6"
tokio = { version = "1", features = ["time"] }
# rusqlite not needed — native uses file-based JSON cache via dirs crate
