[package]
name = "openwok-mobile"
version = "0.1.0"
edition = "2024"

[dependencies]
openwok-core = { path = "../core" }
dioxus = { version = "0.7", features = ["router"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
dirs = "6"
open = "5"
tokio = { version = "1", features = ["time"] }
