[package]
name = "openwok-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
openwok-core = { path = "../core" }
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
rust_decimal = { version = "1", features = ["serde"] }
wasm-bindgen = "0.2"

# Standalone crate — not part of main workspace (rusqlite can't compile to wasm32)
[workspace]
